styles.css
*{
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  /* Change the font */
  font-family: 'Kumbh Sans',  sans-serif;
  scroll-behavior: smooth;
}


.navbar {
  background: #131313;
  height: 60px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.2rem;
  position: sticky;
  top: 0;
  z-index: 999;
}

.navbar__container{
  display: flex;
  justify-self: space-between;
  height: 60px;
  z-index: 1;
  width: 100%;
  max-width: 1300px;
  margin: 0 auto;
  padding: 0 50px;
}

#navbar__logo {
  background: #00d2ff;  /* fallback for old browsers */
  background: -webkit-linear-gradient(to right, #3a7bd5, #00d2ff);  /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(to right, #3a7bd5, #00d2ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
  background-size: 100%;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
  display: flex;
  align-items: center;
  cursor: pointer;
  text-decoration: none;
  font-size: 2rem;
}

.navbar__links:hover {
  /* change the hover colour to green tmrw */
  color: #00d2ff;
  transition: all 0.3s ease;
}

.navbar__menu{
  display: flex;
  align-items: center;
  list-style: none;


}

.navbar__item{
  height: 60px;
}

.navbar__links{
  color: #fff;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100px;
  text-decoration: none;
  height: 100%;
  transition: all .3s ease;

}
.navbar__links:hover{
  color: #00d2ff;
  transition: all .3s ease;
}

.navbar__btn{
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 1rem;
  width: 100%;
}

.button{
  display: flex;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  padding: 10px 20px;
  height: 100%;
  width: 100%;
  border: none;
  outline: none;
  border-radius: 5px;
  /* find a better linear gradient */
  background: #833ab4 ;
  background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
  background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
  color: #fff;
  transition: all 0.3s ease;
}

/* fixing the screen formatting for mobile devices change max width to 960 px later when fixing menu  */
@media screen and (max-width: 960px){

.navbar__container{
  display: flex;
  justify-content: space-between;
  height: 60px;
  z-index: 1;
  width: 100%;
  max-width: 1300px;
  padding: 0;
}
/* dropdown effect */
.navbar__menu{
  display: grid;
  grid-template-columns: auto;
  margin: 0;
  width: 100%;
  position: absolute;
  top: -1000px;
  opacity: 1;
  transition: all 0.5s ease;
  z-index: -1;
}


.navbar__menu.active{
  background: #131313;
  top: 100%;
  opacity: 1;
  transition: all .5s ease;
  z-index: 99;
  height: 60vh;
  font-size: 1.6rem;

}

#navbar__logo{
  padding-left: 25px;

}

.navbar__toggle .bar{
  width: 25px;
  height: 3px;
  margin: 5px auto;
  transition: all .3s ease-in-out;
  background: #fff;
  
}

.navbar__item {
  width: 100%;
}

.navbar__links {
text-align: center;
padding: 2rem;
width: 100%;
display: table;
}

.button{
  display: flex;
  justify-content: center;
  align-items: center;
  width: 80%;
  height: 80px;
  margin: 0;
}

#mobile-menu{
  position: absolute;
  top: 20%;
  right: 5%;
  transform: translate(5%, 20%);

}

.navbar__toggle .bar{
  display: block;
  cursor: pointer;
}
/* adding class which toggles to the dropdown menu when active this child disappears*/
#mobile-menu.is-active .music__box.bar:nth-child(2){
  opacity: 0;
}
#mobile-menu.is-active .music__box.bar:nth-child(2){
  transform: translateY(8px) rotate(45deg);
}
#mobile-menu.is-active .music__box.bar:nth-child(3){
  transform: translateY(8px) rotate(45deg);
}
}

.hero {
  /* get an image of yourself in here */
  background: #000000;
  /* if you have image in folder then add ../ */
  background-image: url('images/meonmountain.jpg');

  background-position: center;


  background-size: cover;
  padding: 450px 0;
  height: 1000px;
}
.hero__container{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: 1200px;
  margin: 0 auto;
  height: 90%;
  text-align: center;
  padding: 30px;
  margin-top: 10rem;
}

.image__of__brian{
  display: flex;
  
}
.intro__text{
  font-size: 60px;
  margin-bottom: 24px;
  color: #fff;
  
}


.profile {
  
  background: #131313;
  
  /* to be changed once we figure out the text */
  /* padding: 150px 0; */
}
.about__container{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: 1200px;
  margin: 0 auto;
  height: 90%;
  text-align: center;
  padding: 30px;
}

.profile__title{
  font-size: 60px;
  background: #00d2ff;  /* fallback for old browsers */
  background: -webkit-linear-gradient(to right, #3a7bd5, #00d2ff);  /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(to right, #3a7bd5, #00d2ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
  background-size: 100%;
-webkit-background-clip: text;
-moz-background-clip: text;
-webkit-text-fill-color: transparent;
-moz-text-fill-color: transparent;
  text-align: center;
  margin: 100px auto 50px;
}

.profile__description{
  font-size: 1rem;
  font-family:Verdana, Geneva, Tahoma, sans-serif;
  color:#fff;
  text-align: center;
  margin-top: 0px;
}

.contact__btn {
  font-size: 1.8rem;
  background: #833ab4;
  background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
  background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
  padding: 10px 30px;
  width: 50%;
  height: 50%;
  align-items: center;
  border: none;
  border-radius: 20px;
  margin: 100px auto; 
  cursor: pointer;
  position: relative;
  transition: all 0.35s;
  outline: none;
  
}

.contact__btn a {
  position: relative;
  z-index: 2;
  color: #fff;
  text-decoration: none;
}

.contact__btn:after {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  width: 0;
  height: 100%;
  background: #00d2ff;
  transition: all 0.35s;
  border-radius: 20px;
}

.contact__btn:hover {
  color: #fff;
}

.contact__btn:hover:after {
  width: 100%;
}



/* portfolio section */


.about__me{
background: #131313;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
  padding: 30px 0;
}
.about__container{
color: #fff;
padding: 5rem ;

}

.robot__image{

border-radius: 2px;
height: 300px;
width: 200px;
margin: 10px 20px;

display: flex;
flex-direction: column;
align-items: center;
justify-content: center;
}

/* Services Section */
.portfolio__wrapper {
background: #131313;
display: flex;
flex-direction: column;
justify-content: center;
align-items: center;
height: 100%;
padding: 10rem 0;
}

.portfolio h3 {
background-color: #00d2ff;
background-image: linear-gradient(to right, #3a7bd5, #00d2ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */

background-size: 100%;
-webkit-background-clip: text;
-moz-background-clip: text;
-webkit-text-fill-color: transparent;
-moz-text-fill-color: transparent;
margin-bottom: 5rem;
font-size: 2.5rem;
}

.portfolio__container {
display: grid;
grid-template-columns: 1fr 1fr 1fr 1fr;
grid-template-rows: 1fr;
}

.portfolio__box {
margin: 10px;
height: 500px;
width: 450px;
border-radius: 4px;
display: flex;
flex-direction: column;
justify-content: center;
color: #fff;
background-color: #00d2ff;
background-image: linear-gradient(to right, #3a7bd5, #00d2ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */

transition: 0.3s ease-in;
text-align: center;
}
.portfolio__box h4{
text-align: left;
padding: 20px 10px;
justify-content: baseline;
font-size: 40px;
}
.robot__image video{
width: 100%;
height: 90%;
}
.portfolio__box:nth-child(2) {
background: #76b852;  /* fallback for old browsers */
background: -webkit-linear-gradient(to right, #8DC26F, #76b852);  /* Chrome 10-25, Safari 5.1-6 */
background: linear-gradient(to right, #8DC26F, #76b852); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */

}

.portfolio__box:nth-child(3) {
background: #DA22FF;  /* fallback for old browsers */
background: -webkit-linear-gradient(to right, #9733EE, #DA22FF);  /* Chrome 10-25, Safari 5.1-6 */
background: linear-gradient(to right, #9733EE, #DA22FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */

}

/* .services__card h2 {
text-align: center;
} */

.portfolio__box p {
text-align: center;
margin-top: 24px;
font-size: 20px;
}

/* .services__btn {
display: flex;
justify-content: center;
margin-top: 50px;
} */
/* 
.services__card button {
color: #fff;
padding: 14px 24px;
border: none;
outline: none;
border-radius: 4px;
background: #131313;
font-size: 1rem;
} */
/* 
.services__card button:hover {
cursor: pointer;
} */

.portfolio__box:hover {
transform: scale(1.075);
transition: 0.3s ease-in;
cursor: pointer;
}

@media screen and (max-width: 1500px) {
.portfolio__container {
  grid-template-columns: 1fr 1fr;
}
}

@media screen and (max-width: 800px) {
.portfolio__container {
  grid-template-columns: 1fr;
}
}

/* Footer CSS */
.footer__container {
background-color: #131313;
padding: 5rem 0;
display: flex;
flex-direction: column;
justify-content: center;
align-items: center;
}

#footer__logo {
color: #fff;
display: flex;
align-items: center;
cursor: pointer;
text-decoration: none;
font-size: 2rem;
}

.footer__links {
width: 100%;
max-width: 1000px;
display: flex;
justify-content: center;
}

.footer__link--wrapper {
display: flex;
}

.footer__link--items {
display: flex;
flex-direction: column;
align-items: flex-start;
margin: 16px;
text-align: left;
width: 160px;
box-sizing: border-box;
}

.footer__link--items h2 {
margin-bottom: 16px;
color: #fff;
}

.footer__link--items a {
color: #fff;
text-decoration: none;
margin-bottom: 0.5rem;
transition: 0.3 ease-out;
}

.footer__link--items a:hover {
color: #e9e9e9;
transition: 0.3 ease-out;
}

.social__icon--link {
color: #fff;
font-size: 24px;
}

.social__media {
max-width: 1000px;
width: 100%;
}

.social__media--wrap {
display: flex;
justify-content: space-between;
align-items: center;
width: 90%;
max-width: 1000px;
margin: 40px auto 0 auto;
}

.social__icons {
display: flex;
justify-content: space-between;
align-items: center;
width: 240px;
}

.website__rights {
color: #fff;
}
/* about me stuff */
.my__title{
padding: 50px 25px;
background: #00d2ff;  /* fallback for old browsers */
background: -webkit-linear-gradient(to right, #3a7bd5, #00d2ff);  /* Chrome 10-25, Safari 5.1-6 */
background: linear-gradient(to right, #3a7bd5, #00d2ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
background-size: 100%;
-webkit-background-clip: text;
-moz-background-clip: text;
-webkit-text-fill-color: transparent;
-moz-text-fill-color: transparent;
display: flex;
size: 2rem;
text-align: left;
}
.music__box.bar:nth-child(2){

  margin: -200px;
}
.image-grid{
 --gap: 16px; 
 --num-cols: 4;
 --row-height: 300px;
 box-sizing: border-box;
 padding: var(--gap);
  display: grid;
  grid-template-columns: repeat(var(--num-cols), 1fr);
 grid-auto-rows: var(--row-height);
 gap: var(--gap);
}

.image-grid > img{
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.image-grid-col-2 {
  grid-column: span 2;
}
.image-grid-row-2{
  grid-row: span 2;
}

@media screen and (max-width: 960px) {
  .image-grid{
      --num-cols: 2;
      --row-height: auto;
      
  }
  .about__container{
    padding: 25px;
  }
  .portfolio__wrapper{
    padding: 25px;
  }
}
/* Footer section */
.footer__container {
  background-color: #131313;
  padding: 5rem 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  

}

.website__rights{
color: #fff;
}

